# Mimosa

./: .gitignore  README.md  TODO.md  conf.yaml.example  model_dict.json  pyproject.toml  run_server.py
character/: interaction_phrases.json  personality.yaml.example  personality_state.yaml.example
docs/: persona-drift.md  research_questions.md
frontend/: index.html  style.css
frontend/js/: app.js  audio-processor.js  audio.js  interaction-config.json  interaction.js  live2d.js  settings.js  websocket.js
prompts/: persona_mimosa.txt
scripts/: download_asr_model.py
src/mimosa/: __init__.py  api_routes.py  config.py  routes.py  server.py  service_context.py  websocket_handler.py
src/mimosa/asr/: asr_factory.py  asr_interface.py  funasr_engine.py  sherpa_onnx_asr.py
src/mimosa/conversation/: conversation_handler.py  interaction_phrase_pool.py
src/mimosa/core/: __init__.py  agent_core.py
src/mimosa/live2d/: live2d_model.py
src/mimosa/llm/: llm_factory.py  llm_interface.py  openai_compatible_llm.py
src/mimosa/memory/: chat_history.py  long_term_memory.py
src/mimosa/personality/: __init__.py  personality_evolver.py  personality_manager.py
src/mimosa/tts/: edge_tts_engine.py  tts_factory.py  tts_interface.py
src/mimosa/vad/: silero_vad.py  vad_factory.py  vad_interface.py
tests/: test_api.py  test_llm.py  test_personality.py
