[project]
name = "mimosa"
version = "0.1.0"
description = "Mimosa - An evolving virtual companion that senses and responds to human emotion"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.33.0",
    "openai>=1.57.0",
    "edge-tts>=7.0.0",
    "sherpa-onnx>=1.10.39",
    "numpy>=1.26.4,<2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "soundfile>=0.12.1",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
funasr = [
    "funasr>=1.3.0",
    "modelscope>=1.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
